2011-03-18 John Wu <John dot Wu at ACM dot org>
	* src/qExpr.cpp: print 12 digits from qContinuousRange::printFull
	* src/i*.cpp: update the message from the constructors to say
	"intialization completed" instead of "constructed" as the
	suggestion from Jon Strabala
	* src/ixfuzz.cpp: fuzz::readCoarse computed incorrect number of
	elements for coffset32/coffset64 and cbits

2011-03-17 John Wu <John dot Wu at ACM dot org>
	* configure.ac: when --enable-debug and --disable-xopt are both
	specified, remove -O options from CFLAGS and CXXFLAGS

2011-03-10 John Wu <John dot Wu at ACM dot org>
	* src/category.h, src/category.cpp: change the definition of
	category::getStrings to take advantage of the case where the
	dictionary has only one valid string (to address an issue reported
	by Andrew Olson)

2011-03-07 John Wu <John dot Wu at ACM dot org>
	* category.h, category.cpp: change the definition of getNumKeys,
	getKey, and isKey to invoke prepareMembers when the dictionary is
	empty

2011-03-02 John Wu <John dot Wu at ACM dot org>
	* src/part.cpp: update part::readMetaTags to match the
	part::readMetaData
	* win/MinGW.mak: add SHELL=cmd.exe to remove the dependency on
	MSYS (which provides bash), removed the use of rm and perl from
	tests (now able to compile ibis and check-ibis with nuwen.net's
	distribution of MinGW without MSYS)
	* src/const.h: add conditional statement to include stdint.h when
	compiling under MinGW
	* src/part.cpp: replace the exception generated when missing
	metadata file with an error message (to avoid a problem reported
	by Andrew Olson)
	* src/const.h, src/capi.h: update the conditional compilation
	macros to compile under MinGW
	* src/resource.cpp:390-397 add statements to strip away the outer
	most quotes
	* src/part.cpp:1538-1563 add a case in part::readMetaData to deal
	with obviously bad values in meta tags

2011-02-28 John Wu <John dot Wu at ACM dot org>
	* tests/Makefile.am: add dependency on TESTDIR for some targets
