@@ -2248,7 +2248,7 @@ int ibis::bylt::readCoarse(const char* fn) {
     for (unsigned i = 0; i < nc; ++ i)
 	cbits[i] = 0;
 
-    LOGGER(ibis::gVerbose > 7)
+    LOGGER(ibis::gVerbose > 6)
 	<< "bylt[" << col->partition()->name() << '.' << col->name()
 	<< "]::readCoarse(" << fnm << ") completed reading the header";
     return 0;
